--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "emailjs-com": "^3.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-scroll": "^1.8.9",
-    "react-toastify": "^9.1.2"
+    "react-toastify": "^9.1.2",
+    "swiper": "^9.2.3"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
